--- a/StareMedic/Views/Pacientes.xaml
+++ b/StareMedic/Views/Pacientes.xaml
@@ -38,31 +38,29 @@
                             <Grid 
                                 Padding="20">
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="Auto" />
                                     <ColumnDefinition Width="*" />
-                                    <ColumnDefinition Width="Auto" />
+                                    <ColumnDefinition Width="*" />
                                 </Grid.ColumnDefinitions>
-                             
+
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                </Grid.RowDefinitions>
+
                                 <Label 
                                     Grid.Column="0"
+                                    Grid.Row="0"
                                     Text="{Binding Path=Id, StringFormat='ID: {0} '}"
                                     FontFamily="OpenSansRegular"
-                                    TextColor="{StaticResource Black}"
+                                    TextColor="{StaticResource Alter2}"
                                     FontSize="15"
                                     HorizontalOptions="StartAndExpand"
                                     HorizontalTextAlignment="Start"/>
 
                                 <Label 
-                                    Grid.Column="1"
-                                    Text=" --  "
-                                    FontFamily="OpenSansRegular"
-                                    FontSize="15"
-                                    TextColor="{StaticResource Black}"
-                                    HorizontalOptions="Center"/>
-
-                                <Label 
-                                    Grid.Column="2"
-                                    Text="{Binding Nombre}"
+                                    Grid.Column="0"
+                                    Grid.Row="1"
+                                    Text="{Binding Nombre, StringFormat='Nombre: {0} '}"
                                     FontFamily="OpenSansRegular"
                                     FontSize="15"
                                     TextColor="{StaticResource Black}"
@@ -103,14 +101,12 @@
 
             </SearchBar>
 
-            <Image Grid.Row="1"
-                   Source="logo_hospital.png"
-                   VerticalOptions="Center"
-                   HorizontalOptions="Center"
-                   HeightRequest="200"/>
-
-
-
+            <Image 
+                Grid.Row="1"
+                Source="logo_hospital.png"
+                VerticalOptions="Center"
+                HorizontalOptions="Center"
+                HeightRequest="200"/>
 
             <Grid VerticalOptions="EndAndExpand" 
                   RowDefinitions="*,*" 
