main page changes

--- a/StareMedic/MainPage.xaml
+++ b/StareMedic/MainPage.xaml
@@ -9,13 +9,29 @@
         <Color x:Key="Alter1">#C3ACD0</Color>
         <Color x:Key="Alter2">#7743DB</Color>
         <Color x:Key="Black">#000</Color>
-    </ContentPage.Resources>
-    
-   
-    <StackLayout>
+
+
+        <Style x:Key="RoundedBorderStyle" TargetType="Border">
+            <Setter Property="Stroke" Value="#7743DB" />
+            <Setter Property="StrokeThickness" Value="2" />
+            <Setter Property="WidthRequest" Value="300"/>
+            <Setter Property="HorizontalOptions" Value="Center"/>
+            <Setter Property="VerticalOptions" Value="Center"/>
+            <Setter Property="StrokeShape" Value="RoundRectangle 30,30,30,30" />
+            <Setter Property="HeightRequest" Value="100"/>
+        </Style>
         
+    </ContentPage.Resources>
+
+
+
+    <StackLayout>
+
         <!--First grid who has the first row of the ui-->
+
         <Grid BackgroundColor="{StaticResource Secundario}" 
+              Padding="10"
+              ColumnSpacing="10"
               HorizontalOptions="FillAndExpand" 
               VerticalOptions="Start">
             <Grid.RowDefinitions>
@@ -30,202 +46,219 @@
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
 
-            <!--Grids to assing the boton options-->     
-            <Grid Grid.Column="0" 
+            <!--Grids to assing the boton options-->
+            <Border
+                Style="{StaticResource RoundedBorderStyle}"
+                Grid.Column="0">
+                <Grid 
+                    
+                    Grid.Column="0" 
                   BackgroundColor="{StaticResource Alter2}"     
                   ColumnDefinitions="Auto, *"
                   Padding="18">
 
 
-                <Image Grid.Column="0"
-                       Source="logo_hospital.png"
-                       Aspect="AspectFit"
-                       HeightRequest="50"
-                       VerticalOptions="Start"                     
-                       HorizontalOptions="Start"/>
-                       
-                <Label Grid.Column="1"
-                       Text="Stare Medic"
-                       FontSize="Large"
-                       FontAttributes="Bold"
-                       FontFamily="OpenSansRegular"
-                       TextColor="{StaticResource Principal}"
-                       VerticalOptions="Center"                
-                       HorizontalOptions="Center">
-                   
-                </Label>
-            </Grid>
+                    <Image Grid.Column="0"
+                           Source="logo_hospital.png"
+                           Aspect="AspectFit"
+                           HeightRequest="50"
+                           VerticalOptions="Start"                     
+                           HorizontalOptions="Start"/>
 
-            <Grid x:Name="PatientsMain"
+                    <Label Grid.Column="1"
+                           Text="Stare Medic"
+                           FontSize="Large"
+                           FontAttributes="Bold"
+                           FontFamily="OpenSansRegular"
+                           TextColor="{StaticResource Principal}"
+                           VerticalOptions="Center"                
+                           HorizontalOptions="Center">
+
+                    </Label>
+                </Grid>
+            </Border>
+
+
+            <Border
+                Style="{StaticResource RoundedBorderStyle}"
+                Grid.Column="1">
+                
+                <Grid 
+                  x:Name="PatientsMain"
                   Grid.Column="1"
                   BackgroundColor="{StaticResource Alter1}" 
-                  ColumnDefinitions="Auto, *"
-                  Padding="18"
-                  ColumnSpacing="-60">
+                  ColumnDefinitions="*, *">
 
-                <VisualStateManager.VisualStateGroups>
-                    <VisualStateGroupList>
-                        <VisualStateGroup x:Name="CommonStates">
-                            <VisualState x:Name="Normal" />
-                            <VisualState x:Name="PointerOver">
-                                <VisualState.Setters>
-                                    <Setter Property="BackgroundColor" Value="LightGray" />
-                                </VisualState.Setters>
-                            </VisualState>
-                        </VisualStateGroup>
-                    </VisualStateGroupList>
-                </VisualStateManager.VisualStateGroups>
 
-                <Image Grid.Column="0"
+
+                    <VisualStateManager.VisualStateGroups>
+                        <VisualStateGroupList>
+                            <VisualStateGroup x:Name="CommonStates">
+                                <VisualState x:Name="Normal" />
+                                <VisualState x:Name="PointerOver">
+                                    <VisualState.Setters>
+                                        <Setter Property="BackgroundColor" Value="LightGray" />
+                                    </VisualState.Setters>
+                                </VisualState>
+                            </VisualStateGroup>
+                        </VisualStateGroupList>
+                    </VisualStateManager.VisualStateGroups>
+
+                    <Image Grid.Column="0"
                        Source="patients.png"
                        Aspect="AspectFit"
-                       HeightRequest="40"
-                       VerticalOptions="Start"
-                       HorizontalOptions="Start"/>
-                <Label Grid.Column="1"
+                       HeightRequest="50"
+                       VerticalOptions="Center"
+                       HorizontalOptions="Center"/>
+
+                    <Label Grid.Column="1"
                        Text="Pacientes"
                        FontSize="Subtitle"                      
                        FontFamily="OpenSansRegular"
                        TextColor="{StaticResource Black}"
                        VerticalOptions="Center"
-                       HorizontalOptions="Center">
-                </Label>
-                
-                <Grid.GestureRecognizers>
-                    <TapGestureRecognizer               
+                       HorizontalOptions="Start">
+                    </Label>
+
+                    <Grid.GestureRecognizers>
+                        <TapGestureRecognizer               
                         Tapped="BtnPacientes_Clicked"/>
-                </Grid.GestureRecognizers>
+                    </Grid.GestureRecognizers>
 
-                
-                   
+                </Grid>
 
+            </Border>
 
-            </Grid>
-
-            <Grid x:Name="MedicsMain"
+            <Border 
+                Style="{StaticResource RoundedBorderStyle}"
+                Grid.Column="2">
+                <Grid x:Name="MedicsMain"
                   Grid.Column="2" 
                   BackgroundColor="{StaticResource Alter1}" 
-                  ColumnDefinitions="Auto, *"
-                  Padding="18"
-                  ColumnSpacing="-60">
+                  ColumnDefinitions="*, *">
 
-                <VisualStateManager.VisualStateGroups>
-                    <VisualStateGroupList>
-                        <VisualStateGroup x:Name="CommonStates">
-                            <VisualState x:Name="Normal" />
-                            <VisualState x:Name="PointerOver">
-                                <VisualState.Setters>
-                                    <Setter Property="BackgroundColor" Value="LightGray" />
-                                </VisualState.Setters>
-                            </VisualState>
-                        </VisualStateGroup>
-                    </VisualStateGroupList>
-                </VisualStateManager.VisualStateGroups>
+                    <VisualStateManager.VisualStateGroups>
+                        <VisualStateGroupList>
+                            <VisualStateGroup x:Name="CommonStates">
+                                <VisualState x:Name="Normal" />
+                                <VisualState x:Name="PointerOver">
+                                    <VisualState.Setters>
+                                        <Setter Property="BackgroundColor" Value="LightGray" />
+                                    </VisualState.Setters>
+                                </VisualState>
+                            </VisualStateGroup>
+                        </VisualStateGroupList>
+                    </VisualStateManager.VisualStateGroups>
 
-                <Image Grid.Column="0"
+                    <Image Grid.Column="0"
                        Source="medic.png"
                        Aspect="AspectFit"
-                       HeightRequest="40"
-                       VerticalOptions="Start"
-                       HorizontalOptions="Start"/>
-                <Label Grid.Column="1"
+                       HeightRequest="50"
+                       VerticalOptions="Center"
+                       HorizontalOptions="Center"/>
+                    <Label Grid.Column="1"
                        Text="Medicos"
                        FontSize="Subtitle"
                        FontFamily="OpenSansRegular"
                        TextColor="{StaticResource Black}"
                        VerticalOptions="Center"
-                       HorizontalOptions="Center">
-                </Label>
-                
-                <Grid.GestureRecognizers>
-                    <TapGestureRecognizer Tapped="BtnMedics_Clicked"/>
-                </Grid.GestureRecognizers>
-                
-            </Grid>
+                       HorizontalOptions="Start">
+                    </Label>
 
-            <Grid x:Name="RoomsMain"
+                    <Grid.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="BtnMedics_Clicked"/>
+                    </Grid.GestureRecognizers>
+
+                </Grid>
+            </Border>
+
+            <Border 
+                Style="{StaticResource RoundedBorderStyle}"
+                Grid.Column="3">
+                <Grid x:Name="RoomsMain"
                   Grid.Column="3" 
                   BackgroundColor="{StaticResource Alter1}" 
-                  ColumnDefinitions="Auto, *"
-                  Padding="18"
-                  ColumnSpacing="-60">
+                  ColumnDefinitions="*, *">
 
-                <VisualStateManager.VisualStateGroups>
-                    <VisualStateGroupList>
-                        <VisualStateGroup x:Name="CommonStates">
-                            <VisualState x:Name="Normal" />
-                            <VisualState x:Name="PointerOver">
-                                <VisualState.Setters>
-                                    <Setter Property="BackgroundColor" Value="LightGray" />
-                                </VisualState.Setters>
-                            </VisualState>
-                        </VisualStateGroup>
-                    </VisualStateGroupList>
-                </VisualStateManager.VisualStateGroups>
+                    <VisualStateManager.VisualStateGroups>
+                        <VisualStateGroupList>
+                            <VisualStateGroup x:Name="CommonStates">
+                                <VisualState x:Name="Normal" />
+                                <VisualState x:Name="PointerOver">
+                                    <VisualState.Setters>
+                                        <Setter Property="BackgroundColor" Value="LightGray" />
+                                    </VisualState.Setters>
+                                </VisualState>
+                            </VisualStateGroup>
+                        </VisualStateGroupList>
+                    </VisualStateManager.VisualStateGroups>
 
-                <Image Grid.Column="0"
+                    <Image Grid.Column="0"
                        Source="rooms.png"
                        Aspect="AspectFit"
-                       HeightRequest="40"
-                       VerticalOptions="Start"
-                       HorizontalOptions="Start"/>
-                <Label Grid.Column="1"
+                       HeightRequest="50"
+                       VerticalOptions="Center"
+                       HorizontalOptions="Center"/>
+                    <Label Grid.Column="1"
                        Text="Habitaciones"
                        FontSize="Subtitle"
                        FontFamily="OpenSansRegular"
                        TextColor="{StaticResource Black}"
                        VerticalOptions="Center"
-                       HorizontalOptions="Center">
-                </Label>
+                       HorizontalOptions="Start">
+                    </Label>
 
-                <Grid.GestureRecognizers>
-                    <TapGestureRecognizer Tapped="BtnRooms_Clicked"/>
-                </Grid.GestureRecognizers>
-                
-            </Grid>
+                    <Grid.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="BtnRooms_Clicked"/>
+                    </Grid.GestureRecognizers>
 
-            <Grid x:Name="RegCCMain"
+                </Grid>
+            </Border>
+
+            <Border 
+                Style="{StaticResource RoundedBorderStyle}"
+                Grid.Column="4">
+                <Grid x:Name="RegCCMain"
                   Grid.Column="4"
                   BackgroundColor="{StaticResource Alter1}" 
-                  ColumnDefinitions="Auto, *"
-                  Padding="18"
-                  ColumnSpacing="30">
+                  ColumnDefinitions="*, *">
 
-                <VisualStateManager.VisualStateGroups>
-                    <VisualStateGroupList>
-                        <VisualStateGroup x:Name="CommonStates">
-                            <VisualState x:Name="Normal" />
-                            <VisualState x:Name="PointerOver">
-                                <VisualState.Setters>
-                                    <Setter Property="BackgroundColor" Value="LightGray" />
-                                </VisualState.Setters>
-                            </VisualState>
-                        </VisualStateGroup>
-                    </VisualStateGroupList>
-                </VisualStateManager.VisualStateGroups>
+                    <VisualStateManager.VisualStateGroups>
+                        <VisualStateGroupList>
+                            <VisualStateGroup x:Name="CommonStates">
+                                <VisualState x:Name="Normal" />
+                                <VisualState x:Name="PointerOver">
+                                    <VisualState.Setters>
+                                        <Setter Property="BackgroundColor" Value="LightGray" />
+                                    </VisualState.Setters>
+                                </VisualState>
+                            </VisualStateGroup>
+                        </VisualStateGroupList>
+                    </VisualStateManager.VisualStateGroups>
 
-                <Image Grid.Column="0"
+                    <Image Grid.Column="0"
                        Source="clinical_case.png"
                        Aspect="AspectFit"
-                       HeightRequest="40"
-                       VerticalOptions="Start"
-                       HorizontalOptions="Start"/>
-                <Label Grid.Column="1"
+                       HeightRequest="50"
+                       VerticalOptions="Center"
+                       HorizontalOptions="Center"/>
+                    <Label Grid.Column="1"
                        Text="Admisiones Clinicas"
                        FontSize="Subtitle"
                        FontFamily="OpenSansRegular"
                        TextColor="{StaticResource Black}"
                        VerticalOptions="Center"
-                       HorizontalOptions="Center">
-                </Label>
+                       HorizontalOptions="Start">
+                    </Label>
 
-                <Grid.GestureRecognizers>
-                    <TapGestureRecognizer Tapped="BtnRegCasoCli_Clicked"/>
-                </Grid.GestureRecognizers>
-                
-            </Grid>
+                    <Grid.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="BtnRegCasoCli_Clicked"/>
+                    </Grid.GestureRecognizers>
 
+                </Grid>
+            </Border>
         </Grid>
+        
 
         <!--Second grid to separate the UI options-->
         <Grid BackgroundColor="{StaticResource Secundario}" 
